add template page consent

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> 
 		
-		<title>Portfolio Login</title>
+		<title>Portfólio Login</title>
 		
 		<link rel="stylesheet" th:href="@{/css/reset.css}" />
 		<link rel="stylesheet" th:href="@{/css/login.css}" />
@@ -28,12 +28,12 @@
 					<div class="form-inputs">
 						<div class="form-input">
 							<label for="username">Endereço de e-mail</label>
-							<input id="username" name="username" type="email" placeholder="Entre com o e-mail"/>
+							<input id="username" name="username" type="email" placeholder="📧  Entre com o e-mail"/>
 						</div>
 						
 						<div class="form-input">
 							<label for="password">Senha</label>
-							<input id="password" name="password" type="password" placeholder="Entre com a senha"/>
+							<input id="password" name="password" type="password" placeholder="🔒  Entre com a senha"/>
 						</div>
 						
 						<div class="error-msg" th:if="${param.error}">
