implements custom consent page

--- a/src/main/resources/templates/pages/consent.html
+++ b/src/main/resources/templates/pages/consent.html
@@ -44,7 +44,7 @@
 		          
 		          <p>As seguintes permissões são solicitadas pelo aplicativo:</p>
 		
-		          <div th:each="scope: ${scopes}" class="scopes-to-approve">
+		          <div th:each="scope: ${scopesToApprove}" class="scopes-to-approve">
 	              <input class="form-check-input"
 	                     type="checkbox"
 	                     name="scope"
