--- a/src/main/resources/public/css/login.css
+++ b/src/main/resources/public/css/login.css
@@ -78,7 +78,7 @@ main {
 .login-card .form-input input {
 	width: 100%;
 	height: 32px;
-	padding: 8px 16px;
+	padding: 8px;
 	border-radius: 6px;
 	border: 2px solid #D4D4D8;
 	background-color: #D4D4D8;
@@ -88,6 +88,11 @@ main {
 
 .login-card .form-input input:focus {
 	border: 2px solid #16A34A;
+}
+
+.login-card .form-input input::placeholder {
+	color: rgba(39, 39, 42, 0.75);
+	text-shadow: 0 0 0 #27272A;
 }
 
 .login-card .form-actions {
@@ -105,6 +110,7 @@ main {
 	border: 2px solid #86EFAC;
 	font-weight: 600;
 	background-color: #86EFAC;
+	color: #18181B;
 	outline: none;
 	transition: border-color 0.2s ease-in-out, background-color .2s ease-in-out;
 }
